WIP - Add more configs

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -1,20 +1,3 @@
-# See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,preferred,auto,auto
-
-monitor=HDMI-A-1,2560x1440@120,0x0,1
-monitor=DP-3,2560x1440@120,2560x0,1
-
-
-# See https://wiki.hyprland.org/Configuring/Keywords/ for more
-
-# Execute your favorite apps at launch
-# exec-once = waybar & hyprpaper & firefox
-exec-once = swaybg -i ~/Pictures/car.jpg
-exec-once = waybar
-
-# Source a file (multi-file configs)
-# source = ~/.config/hypr/myColors.conf
-
 # Set programs that you use
 $terminal = kitty
 $fileManager = dolphin
@@ -187,7 +170,10 @@ bind = $mainMod, mouse_up, workspace, e-1
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
-source = ~/.config/hypr/windowrules.conf
-source = ~/.config/hypr/common.conf
-source = ~/.config/hypr/theme.conf
-source = ~/.config/hypr/keybindings.conf
+source = ./nvidia.conf
+source = ./monitors.conf
+source = ./startup.conf
+source = ./windowrules.conf
+source = ./common.conf
+source = ./theme.conf
+source = ./keybindings.conf
