--- a/dot_config/hypr/theme.conf
+++ b/dot_config/hypr/theme.conf
@@ -1,6 +1,6 @@
-exec = gsettings set org.gnome.desktop.interface icon-theme 'Tela-circle-pink'
-exec = gsettings set org.gnome.desktop.interface gtk-theme 'Rose-Pine'
-exec = gsettings set org.gnome.desktop.interface color-scheme 'prefer-dark'
+#exec = gsettings set org.gnome.desktop.interface icon-theme 'Tela-circle-pink'
+#exec = gsettings set org.gnome.desktop.interface gtk-theme 'Rose-Pine'
+#exec = gsettings set org.gnome.desktop.interface color-scheme 'prefer-dark'
 
 general {
     gaps_in = 3
