--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -42,11 +42,12 @@ packages:
   - "tmux"
   # Apps
   - "chromium"
-  - "code"
   - "steam"
   - "obsidian"
   - "openrgb"
+  - "thorium"
   - "vesktop"
+  - "vscodium"
   # Themes
   - "rose-pine-gtk-theme-full"
   - "sddm-theme-tokyo-night"
