--- a/dot_config/hypr/startup.conf
+++ b/dot_config/hypr/startup.conf
@@ -1,2 +1,3 @@
-exec-once = swaybg -i ~/.local/share/chezmoi/Wallpapers/car.jpg
+exec-once = swww init
+exec-once = swww img ~/.local/share/chezmoi/Wallpapers/car.jpg
 exec-once = waybar
