--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -12,7 +12,7 @@ packages:
   - "nwg-look"
   - "sddm-git"
   - "starship"
-  - "swaybg"
+  - "swww"
   - "waybar"
   - "wlogout"
   - "xdg-desktop-portal-hyprland"
