--- a/dot_config/hypr/windowrules.conf
+++ b/dot_config/hypr/windowrules.conf
@@ -1,5 +1,24 @@
+# █░█░█ █ █▄░█ █▀▄ █▀█ █░█░█   █▀█ █░█ █░░ █▀▀ █▀
+# ▀▄▀▄▀ █ █░▀█ █▄▀ █▄█ ▀▄▀▄▀   █▀▄ █▄█ █▄▄ ██▄ ▄█
+
+windowrulev2 = suppressevent maximize, class:.*
+
 windowrulev2 = opacity 0.80 0.80,class:^(kitty)$
 windowrulev2 = opacity 0.80 0.80,class:^(org.kde.dolphin)$
 windowrulev2 = opacity 0.80 0.80,class:^(vesktop)$
 windowrulev2 = opacity 0.80 0.80,class:^(obsidian)$
 windowrulev2 = opacity 0.90 0.90,class:^(Microsoft-edge)$
+windowrulev2 = opacity 0.80 0.70,class:^(org.kde.polkit-kde-authentication-agent-1)$
+
+windowrulev2 = float,title:^(Picture-in-Picture)$
+windowrulev2 = float,class:^(firefox)$,title:^(Library)$
+windowrulev2 = float,class:^(qt5ct)$
+windowrulev2 = float,class:^(qt6ct)$
+windowrulev2 = float,class:^(nwg-look)$
+windowrulev2 = float,class:^(pavucontrol)$
+windowrulev2 = float,class:^(org.kde.polkit-kde-authentication-agent-1)$
+
+# █░░ ▄▀█ █▄█ █▀▀ █▀█   █▀█ █░█ █░░ █▀▀ █▀
+# █▄▄ █▀█ ░█░ ██▄ █▀▄   █▀▄ █▄█ █▄▄ ██▄ ▄█
+
+layerrule = blur,waybar
