--- a/dot_config/hypr/keybindings.conf
+++ b/dot_config/hypr/keybindings.conf
@@ -1,14 +1,75 @@
-
 # █▄▀ █▀▀ █▄█ █▄▄ █ █▄░█ █▀▄ █ █▄░█ █▀▀ █▀
 # █░█ ██▄ ░█░ █▄█ █ █░▀█ █▄▀ █ █░▀█ █▄█ ▄█
 
+$terminal = kitty
+$menu = rofi --show drun
+$mainMod = SUPER
+
 # Audio control
-bindl  = , XF86AudioMute, exec, pamixer -t # toggle audio mute
-bindel = , XF86AudioLowerVolume, exec, pamixer -d 2 # decrease volume
-bindel = , XF86AudioRaiseVolume, exec, pamixer -i 2 # increase volume
+bindl  = , XF86AudioMute, exec, pamixer -t
+bindel = , XF86AudioLowerVolume, exec, pamixer -d 2
+bindel = , XF86AudioRaiseVolume, exec, pamixer -i 2
 bindl  = , XF86AudioPlay, exec, playerctl play-pause
 bindl  = , XF86AudioPause, exec, playerctl play-pause
 bindl  = , XF86AudioNext, exec, playerctl next
 bindl  = , XF86AudioPrev, exec, playerctl previous
-bind = $CONTROL, ESCAPE, exec, killall waybar || waybar # toggle waybar
-bind = $mainMod, backspace, exec, wlogout -b 2 -c 0 -r 0 --protocol layer-shell -m 400 # logout menu
+
+# Application shortcuts
+bind = $mainMod, T, exec, $terminal
+bind = $mainMod, R, exec, $menu
+
+# Window/Session actions
+bind = $mainMod, Q, killactive,
+bind = $mainMod, M, exit,
+bind = $mainMod, V, togglefloating,
+bind = $mainMod, P, pseudo,
+bind = $mainMod, J, togglesplit,
+bind = $mainMod, delete, exit,
+
+# Toggle waybar
+bind = $CONTROL, ESCAPE, exec, killall waybar || waybar
+
+# Run wlogout
+bind = $mainMod, backspace, exec, wlogout -b 2 -c 0 -r 0 --protocol layer-shell -m 400
+
+# Move focus with mainMod + arrow keys
+bind = $mainMod, left, movefocus, l
+bind = $mainMod, right, movefocus, r
+bind = $mainMod, up, movefocus, u
+bind = $mainMod, down, movefocus, d
+
+# Switch workspaces with mainMod + [0-9]
+bind = $mainMod, 1, workspace, 1
+bind = $mainMod, 2, workspace, 2
+bind = $mainMod, 3, workspace, 3
+bind = $mainMod, 4, workspace, 4
+bind = $mainMod, 5, workspace, 5
+bind = $mainMod, 6, workspace, 6
+bind = $mainMod, 7, workspace, 7
+bind = $mainMod, 8, workspace, 8
+bind = $mainMod, 9, workspace, 9
+bind = $mainMod, 0, workspace, 10
+
+# Move active window to a workspace with mainMod + SHIFT + [0-9]
+bind = $mainMod SHIFT, 1, movetoworkspace, 1
+bind = $mainMod SHIFT, 2, movetoworkspace, 2
+bind = $mainMod SHIFT, 3, movetoworkspace, 3
+bind = $mainMod SHIFT, 4, movetoworkspace, 4
+bind = $mainMod SHIFT, 5, movetoworkspace, 5
+bind = $mainMod SHIFT, 6, movetoworkspace, 6
+bind = $mainMod SHIFT, 7, movetoworkspace, 7
+bind = $mainMod SHIFT, 8, movetoworkspace, 8
+bind = $mainMod SHIFT, 9, movetoworkspace, 9
+bind = $mainMod SHIFT, 0, movetoworkspace, 10
+
+# Example special workspace (scratchpad)
+bind = $mainMod, S, togglespecialworkspace, magic
+bind = $mainMod SHIFT, S, movetoworkspace, special:magic
+
+# Scroll through existing workspaces with mainMod + scroll
+bind = $mainMod, mouse_down, workspace, e+1
+bind = $mainMod, mouse_up, workspace, e-1
+
+# Move/resize windows with mainMod + LMB/RMB and dragging
+bindm = $mainMod, mouse:272, movewindow
+bindm = $mainMod, mouse:273, resizewindow
