--- a/dot_config/hypr/theme.conf
+++ b/dot_config/hypr/theme.conf
@@ -1,15 +1,40 @@
-#exec = gsettings set org.gnome.desktop.interface icon-theme 'Tela-circle-pink'
-#exec = gsettings set org.gnome.desktop.interface gtk-theme 'Rose-Pine'
-#exec = gsettings set org.gnome.desktop.interface color-scheme 'prefer-dark'
+
+#█▀▀ █░█ █▀█ █▀ █▀█ █▀█
+#█▄▄ █▄█ █▀▄ ▄█ █▄█ █▀▄
+
+# env = XCURSOR_THEME,Bibata-Modern-Ice
+env = XCURSOR_SIZE,20
+# exec = hyprctl setcursor Bibata-Modern-Ice 20
+# exec = gsettings set org.gnome.desktop.interface cursor-theme 'Bibata-Modern-Ice'
+exec = gsettings set org.gnome.desktop.interface cursor-size 20
+
+
+#█▀▀ █▀█ █▄░█ ▀█▀
+#█▀░ █▄█ █░▀█ ░█░
+
+# exec = gsettings set org.gnome.desktop.interface font-name 'Cantarell 10'
+# exec = gsettings set org.gnome.desktop.interface document-font-name 'Cantarell 10'
+# exec = gsettings set org.gnome.desktop.interface monospace-font-name 'CaskaydiaCove Nerd Font Mono 9'
+exec = gsettings set org.gnome.desktop.interface font-antialiasing 'rgba'
+exec = gsettings set org.gnome.desktop.interface font-hinting 'full'
+
+
+#▀█▀ █░█ █▀▀ █▀▄▀█ █▀▀
+#░█░ █▀█ ██▄ █░▀░█ ██▄
+
+# exec = gsettings set org.gnome.desktop.interface icon-theme 'Tela-circle-pink'
+# exec = gsettings set org.gnome.desktop.interface gtk-theme 'Rose-Pine'
+exec = gsettings set org.gnome.desktop.interface color-scheme 'prefer-dark'
 
 general {
-    gaps_in = 3
+    gaps_in = 4
     gaps_out = 8
     border_size = 2
     col.active_border = rgba(eb6f92ff) rgba(c4a7e7ff) 45deg
     col.inactive_border = rgba(31748fcc) rgba(9ccfd8cc) 45deg
     layout = dwindle
     resize_on_border = true
+    allow_tearing = false
 }
 
 group {
@@ -22,15 +47,16 @@ group {
 decoration {
     rounding = 10
     drop_shadow = false
+    dim_special = 0.3
 
     blur {
-        enabled = yes
+        enabled = true
         size = 6
         passes = 3
+        vibrancy = 0.1696
         new_optimizations = on
         ignore_opacity = on
         xray = false
+        special = true
     }
 }
-
-layerrule = blur,waybar
