--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -3,7 +3,8 @@ packages:
   - "linux-zen-headers"
   - "nvidia-dkms"
   - "dunst"
-  - "hyprland-git"
+  - "hyprland"
+  # - "hyprland-git"
   - "libnotify"
   - "libva"
   - "pavucontrol"
