--- a/dot_config/hypr/keybindings.conf
+++ b/dot_config/hypr/keybindings.conf
@@ -2,7 +2,7 @@
 # █░█ ██▄ ░█░ █▄█ █ █░▀█ █▄▀ █ █░▀█ █▄█ ▄█
 
 $terminal = kitty
-$menu = rofi --show drun
+$menu = rofi -show drun
 $mainMod = SUPER
 
 # Audio control
@@ -16,7 +16,7 @@ bindl  = , XF86AudioPrev, exec, playerctl previous
 
 # Application shortcuts
 bind = $mainMod, T, exec, $terminal
-bind = $mainMod, R, exec, $menu
+bind = $mainMod, SPACE, exec, $menu
 
 # Window/Session actions
 bind = $mainMod, Q, killactive,
