--- a/dot_config/hypr/launch.conf
+++ b/dot_config/hypr/launch.conf
@@ -4,3 +4,4 @@
 exec-once = swww init
 exec-once = swww img ~/.local/share/chezmoi/Wallpapers/car.jpg
 exec-once = waybar
+exec-once = xdg-settings set default-web-browser firefox.desktop
