Remove rofi animations

--- a/dot_config/hypr/windowrules.conf
+++ b/dot_config/hypr/windowrules.conf
@@ -22,3 +22,6 @@ windowrulev2 = float,class:^(org.kde.polkit-kde-authentication-agent-1)$
 # █▄▄ █▀█ ░█░ ██▄ █▀▄   █▀▄ █▄█ █▄▄ ██▄ ▄█
 
 layerrule = blur,waybar
+layerrule = blur,rofi
+layerrule = ignorezero,rofi
+layerrule = noanim,rofi
