--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -3,8 +3,7 @@ packages:
   - "linux-zen-headers"
   - "nvidia-dkms"
   - "dunst"
-  - "hyprland"
-  # - "hyprland-git"
+  - "hyprland-git"
   - "libnotify"
   - "libva"
   - "pavucontrol"
