--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -3,24 +3,29 @@ packages:
   - "linux-zen-headers"
   - "nvidia-dkms"
   - "dunst"
+  - "flatpak"
+  - "git"
   - "hyprland-git"
   - "libnotify"
   - "libva"
   - "pavucontrol"
   - "pamixer"
+  - "pipewire"
   - "polkit-kde-agent"
   - "qt5ct"
   - "qt5-wayland"
   - "qt6ct"
   - "qt6-wayland"
+  - "networkmanager"
   - "nwg-look"
   - "rofi-lbonn-wayland-git"
   - "sddm-git"
   - "starship"
   - "swww"
   - "waybar"
+  - "wireplumber"
   - "wlogout"
-  - "xdg-desktop-portal-hyprland"
+  - "xdg-desktop-portal-hyprland-git"
   - "xdg-desktop-portal-gtk"
   - "zsh"
 
@@ -48,17 +53,14 @@ packages:
   - "tmux"
 
   # Apps
-  - "chromium"
   - "firefox"
+  - "chromium"
   - "steam"
-  - "obsidian"
   - "openrgb"
-  - "ticktick"
-  - "vesktop"
   - "vscodium"
 
   # Themes
-  - "rose-pine-gtk-theme"
+  - "rose-pine-gtk-theme-full"
   - "sddm-theme-tokyo-night-git"
 
   # Fonts
