--- a/dot_config/hypr/launch.conf
+++ b/dot_config/hypr/launch.conf
@@ -2,6 +2,7 @@
 # █▄▄ █▀█ █▄█ █░▀█ █▄▄ █▀█
 
 exec-once = swww init
-exec-once = swww img ~/.local/share/chezmoi/Wallpapers/car.jpg
+exec-once = swww img ~/.local/share/chezmoi/.Wallpapers/car.jpg
 exec-once = waybar
-exec-once = xdg-settings set default-web-browser firefox.desktop
+exec-once = /usr/lib/polkit-kde-authentication-agent-1
+# exec-once = xdg-settings set default-web-browser firefox.desktop
