Add os based templates

--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -1,71 +1,77 @@
 packages:
-  # System
-  - "linux-zen-headers"
-  - "nvidia-dkms"
-  - "dunst"
-  - "flatpak"
-  - "git"
-  - "hyprland-git"
-  - "libnotify"
-  - "libva"
-  - "pavucontrol"
-  - "pamixer"
-  - "pipewire"
-  - "polkit-kde-agent"
-  - "qt5ct"
-  - "qt5-wayland"
-  - "qt6ct"
-  - "qt6-wayland"
-  - "networkmanager"
-  - "nwg-look"
-  - "rofi-lbonn-wayland-git"
-  - "sddm-git"
-  - "starship"
-  - "swww"
-  - "waybar"
-  - "wireplumber"
-  - "wlogout"
-  - "xdg-desktop-portal-hyprland-git"
-  - "xdg-desktop-portal-gtk"
-  - "zsh"
+  linux:
+    arch:
+      # System
+      - "linux-zen-headers"
+      - "nvidia-dkms"
+      - "dunst"
+      - "flatpak"
+      - "git"
+      - "hyprland-git"
+      - "libnotify"
+      - "libva"
+      - "pavucontrol"
+      - "pamixer"
+      - "pipewire"
+      - "polkit-kde-agent"
+      - "qt5ct"
+      - "qt5-wayland"
+      - "qt6ct"
+      - "qt6-wayland"
+      - "networkmanager"
+      - "nwg-look"
+      - "rofi-lbonn-wayland-git"
+      - "sddm-git"
+      - "starship"
+      - "swww"
+      - "waybar"
+      - "wireplumber"
+      - "wlogout"
+      - "xdg-desktop-portal-hyprland-git"
+      - "xdg-desktop-portal-gtk"
+      - "zsh"
 
-  # Utilities
-  - "bat"
-  - "btop"
-  - "eza"
-  - "fzf"
-  - "ncdu"
-  - "neofetch"
-  - "ranger"
-  - "zoxide"
-  - "zsh-autosuggestions"
-  - "zsh-syntax-highlighting"
+      # Utilities
+      - "bat"
+      - "btop"
+      - "eza"
+      - "fzf"
+      - "ncdu"
+      - "neofetch"
+      - "ranger"
+      - "zoxide"
+      - "zsh-autosuggestions"
+      - "zsh-syntax-highlighting"
 
-  # Dev
-  - "docker"
-  - "docker-compose"
-  - "github-cli"
-  - "kitty"
-  - "neovim"
-  - "nvidia-container-toolkit"
-  - "nvm"
-  - "ollama-cuda"
-  - "tmux"
+      # Dev
+      - "docker"
+      - "docker-compose"
+      - "github-cli"
+      - "kitty"
+      - "neovim"
+      - "nvidia-container-toolkit"
+      - "nvm"
+      - "ollama-cuda"
+      - "tmux"
 
-  # Apps
-  - "firefox"
-  - "chromium"
-  - "steam"
-  - "openrgb"
+      # Apps
+      - "firefox"
+      - "chromium"
+      - "steam"
+      - "openrgb"
 
-  # Themes
-  - "rose-pine-gtk-theme-full"
-  - "sddm-theme-tokyo-night-git"
+      # Themes
+      - "rose-pine-gtk-theme-full"
+      - "sddm-theme-tokyo-night-git"
 
-  # Fonts
-  - "noto-fonts"
-  - "noto-fonts-cjk"
-  - "noto-fonts-emoji"
-  - "noto-fonts-extra"
-  - "ttf-hack-nerd"
-  - "ttf-noto-nerd"
+      # Fonts
+      - "noto-fonts"
+      - "noto-fonts-cjk"
+      - "noto-fonts-emoji"
+      - "noto-fonts-extra"
+      - "ttf-hack-nerd"
+      - "ttf-noto-nerd"
+    flatpaks:
+      - "com.ticktick.TickTick"
+      - "dev.vencord.Vesktop"
+      - "md.obsidian.Obsidian"
