--- a/.chezmoiignore
+++ b/.chezmoiignore
@@ -3,3 +3,19 @@ README.md
 .Wallpapers/**
 .etc/
 .etc/**
+{{ if ne .chezmoi.os "linux" -}}
+dot_config/dunst/
+dot_config/dunst/**
+dot_config/hypr/
+dot_config/hypr/**
+dot_config/paru/
+dot_config/paru/**
+dot_config/rofi/
+dot_config/rofi/**
+dot_config/waybar/
+dot_config/waybar/**
+dot_config/wlogout/
+dot_config/wlogout/**
+dot_config/kdeglobals
+{{ if ne .chezmoi.os "darwin" -}}
+{{ end -}}
