--- a/dot_config/kitty/private_kitty.conf
+++ b/dot_config/kitty/private_kitty.conf
@@ -1,7 +1,4 @@
-# BEGIN_KITTY_THEME
-# Rosé Pine
-include current-theme.conf
-# END_KITTY_THEME
+include rose-pine.conf
 
 font_family Hack Nerd Font
 font_size 10.0
