--- a/dot_config/hypr/keybindings.conf
+++ b/dot_config/hypr/keybindings.conf
@@ -1,26 +1,19 @@
 # █▄▀ █▀▀ █▄█ █▄▄ █ █▄░█ █▀▄ █ █▄░█ █▀▀ █▀
 # █░█ ██▄ ░█░ █▄█ █ █░▀█ █▄▀ █ █░▀█ █▄█ ▄█
 
+# Variables
 $terminal = kitty
 $menu = rofi -show drun
+$fileManager = dolphin
 $mainMod = SUPER
-
-# Audio control
-bindl  = , XF86AudioMute, exec, pamixer -t
-bindel = , XF86AudioLowerVolume, exec, pamixer -d 2
-bindel = , XF86AudioRaiseVolume, exec, pamixer -i 2
-bindl  = , XF86AudioPlay, exec, playerctl play-pause
-bindl  = , XF86AudioPause, exec, playerctl play-pause
-bindl  = , XF86AudioNext, exec, playerctl next
-bindl  = , XF86AudioPrev, exec, playerctl previous
 
 # Application shortcuts
 bind = $mainMod, T, exec, $terminal
 bind = $mainMod, SPACE, exec, $menu
+bind = $mainMod, E, exec, $fileManager
 
 # Window/Session actions
 bind = $mainMod, Q, killactive,
-bind = $mainMod, M, exit,
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, P, pseudo,
 bind = $mainMod, J, togglesplit,
@@ -32,11 +25,20 @@ bind = $CONTROL, ESCAPE, exec, killall waybar || waybar
 # Run wlogout
 bind = $mainMod, backspace, exec, wlogout -b 2 -c 0 -r 0 --protocol layer-shell -m 400
 
-# Move focus with mainMod + arrow keys
-bind = $mainMod, left, movefocus, l
-bind = $mainMod, right, movefocus, r
-bind = $mainMod, up, movefocus, u
-bind = $mainMod, down, movefocus, d
+# Audio control
+bindl  = , XF86AudioMute, exec, pamixer -t
+bindel = , XF86AudioLowerVolume, exec, pamixer -d 2
+bindel = , XF86AudioRaiseVolume, exec, pamixer -i 2
+bindl  = , XF86AudioPlay, exec, playerctl play-pause
+bindl  = , XF86AudioPause, exec, playerctl play-pause
+bindl  = , XF86AudioNext, exec, playerctl next
+bindl  = , XF86AudioPrev, exec, playerctl previous
+
+# Move focus with mainMod + hjkl
+bind = $mainMod, H, movefocus, l
+bind = $mainMod, J, movefocus, d
+bind = $mainMod, K, movefocus, u
+bind = $mainMod, L, movefocus, r
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
