--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -1,14 +1,14 @@
 packages:
   linux:
-    arch:
+    packages:
       # System
       - "linux-zen-headers"
       - "nvidia-dkms"
+      - "libnotify"
       - "dunst"
       - "flatpak"
       - "git"
       - "hyprland-git"
-      - "libnotify"
       - "libva"
       - "pavucontrol"
       - "pamixer"
@@ -77,3 +77,32 @@ packages:
       - "dev.vencord.Vesktop"
       - "md.obsidian.Obsidian"
       - "org.gnome.eog"
+  macos:
+    casks:
+      - "arc"
+      - "docker"
+      - "figma"
+      - "kitty"
+      - "maccy"
+      - "notion"
+      - "obsidian"
+      - "spotify"
+      - "ticktick"
+      - "whatsapp"
+    brews:
+      # Utilities
+      - "bat"
+      - "btop"
+      - "eza"
+      - "fzf"
+      - "neofetch"
+      - "wget"
+      - "zoxide"
+
+      # Dev
+      - "docker-compose"
+      - "gh"
+      - "neovim"
+      - "nvm"
+      - "ollama"
+      - "tmux"
