--- a/dot_config/kitty/private_kitty.conf
+++ b/dot_config/kitty/private_kitty.conf
@@ -1,4 +1,11 @@
 include rose-pine.conf
 
-font_family Hack Nerd Font
-font_size 10.0
+# kitty +list-fonts --psnames | grep "Hack"
+font_family        Hack Nerd Font Mono
+bold_font          auto
+italic_font        auto
+bold_italic_font   auto
+font_size          10.0
+
+background_opacity 0.8
+background_blur    10
