--- a/dot_config/hypr/theme.conf
+++ b/dot_config/hypr/theme.conf
@@ -11,9 +11,9 @@ exec = gsettings set org.gnome.desktop.interface cursor-size 20
 # █▀▀ █▀█ █▄░█ ▀█▀
 # █▀░ █▄█ █░▀█ ░█░
 
-exec = gsettings set org.gnome.desktop.interface font-name 'Noto Serif 10'
-exec = gsettings set org.gnome.desktop.interface document-font-name 'Noto Serif 10'
-exec = gsettings set org.gnome.desktop.interface monospace-font-name 'NotoSerif Nerd Font Mono 9'
+exec = gsettings set org.gnome.desktop.interface font-name 'Noto Sans 10'
+exec = gsettings set org.gnome.desktop.interface document-font-name 'Noto Sans 10'
+exec = gsettings set org.gnome.desktop.interface monospace-font-name 'NotoSans Nerd Font Mono 9'
 exec = gsettings set org.gnome.desktop.interface font-antialiasing 'rgba'
 exec = gsettings set org.gnome.desktop.interface font-hinting 'full'
 
