Add unzip package

--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -39,6 +39,7 @@ packages:
       - "ncdu"
       - "neofetch"
       - "ranger"
+      - "unzip"
       - "zoxide"
       - "zsh-autosuggestions"
       - "zsh-syntax-highlighting"
