--- a/dot_config/hypr/keybindings.conf
+++ b/dot_config/hypr/keybindings.conf
@@ -14,10 +14,13 @@ bind = $mainMod, E, exec, $fileManager
 
 # Window/Session actions
 bind = $mainMod, Q, killactive,
-bind = $mainMod, V, togglefloating,
-bind = $mainMod, P, pseudo,
-bind = $mainMod, J, togglesplit,
+bind = $mainMod, F, togglefloating,
+bind = $mainMod, P, togglesplit,
+bind = $mainMod SHIFT, P, pseudo,
 bind = $mainMod, delete, exit,
+
+# Clipboard
+bind = $mainMod SHIFT, C, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
 
 # Toggle waybar
 bind = $CONTROL, ESCAPE, exec, killall waybar || waybar
