--- a/dot_config/hypr/launch.conf
+++ b/dot_config/hypr/launch.conf
@@ -5,4 +5,5 @@ exec-once = swww init
 exec-once = swww img ~/.local/share/chezmoi/Wallpapers/car.jpg
 exec-once = waybar
 exec-once = /usr/lib/polkit-kde-authentication-agent-1
-# exec-once = xdg-settings set default-web-browser firefox.desktop
+exec-once = wl-paste --type text --watch cliphist store
+exec-once = wl-paste --type image --watch cliphist store
