Add more aliases

--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -34,7 +34,9 @@ packages:
       # Utilities
       - "bat"
       - "btop"
+      - "cliphist"
       - "eza"
+      - "fancontrol-gui"
       - "fzf"
       - "ncdu"
       - "neofetch"
