--- a/dot_config/hypr/windowrules.conf
+++ b/dot_config/hypr/windowrules.conf
@@ -17,10 +17,12 @@ windowrulev2 = float,class:^(nwg-look)$
 windowrulev2 = float,class:^(pavucontrol)$
 windowrulev2 = float,class:^(org.kde.polkit-kde-authentication-agent-1)$
 
+windowrulev2 = opacity 1 1,fullscreen: 1
+
 # █░░ ▄▀█ █▄█ █▀▀ █▀█   █▀█ █░█ █░░ █▀▀ █▀
 # █▄▄ █▀█ ░█░ ██▄ █▀▄   █▀▄ █▄█ █▄▄ ██▄ ▄█
 
-layerrule = blur,waybar
+# layerrule = blur,waybar
 layerrule = blur,rofi
 layerrule = ignorezero,rofi
 layerrule = noanim,rofi
