--- a/dot_config/waybar/config.jsonc
+++ b/dot_config/waybar/config.jsonc
@@ -13,22 +13,7 @@
     "custom/wlogout"
   ],
   "clock": {
-    "format": "{: %H:%M |  %A, %B %d, %Y}",
-  //   "tooltip-format": "<tt><small>{calendar}</small></tt>",
-  //   "calendar": {
-  //     "mode": "year",
-  //     "mode-mon-col": 3,
-  //     "weeks-pos": "right",
-  //     "on-scroll": 1,
-  //     "on-click-right": "mode",
-  //     "format": {
-  //       "months": "<span color='#ffead3'><b>{}</b></span>",
-  //       "days": "<span color='#ecc6d9'><b>{}</b></span>",
-  //       "weeks": "<span color='#99ffdd'><b>W{}</b></span>",
-  //       "weekdays": "<span color='#ffcc66'><b>{}</b></span>",
-  //       "today": "<span color='#ff6699'><b><u>{}</u></b></span>",
-  //     },
-  //   },
+    "format": " {:%H:%M |  %A, %B %d, %Y}",
   },
   "hyprland/workspaces": {
     "format": "<sub>{icon}</sub>"
