--- a/dot_config/waybar/config.jsonc
+++ b/dot_config/waybar/config.jsonc
@@ -1,12 +1,13 @@
 // -*- mode: jsonc -*-
 {
   "layer": "top", // Waybar at top layer
-  "spacing": 0, // Gaps between modules (4px)
+  "spacing": 0, // Gaps between modules (0)
   "modules-left": ["clock", "hyprland/workspaces"],
   "modules-center": ["hyprland/window"],
   "modules-right": [
     "tray",
     "wireplumber",
+    "network",
     "cpu",
     "memory",
     "temperature",
@@ -22,14 +23,26 @@
     "max-length": 50,
     "separate-outputs": true
   },
+  "tray": {
+    "spacing": 10
+  },
   "wireplumber": {
     "format": "{volume} {icon}",
     "format-muted": "",
     "on-click": "helvum",
     "format-icons": ["", "", ""]
   },
-  "tray": {
-    "spacing": 10
+  "network": {
+    "format": "{ifname}",
+    "format-wifi": "{essid} ({signalStrength}%) ",
+    "format-ethernet": "󰈀 | {bandwidthDownBytes}  | {bandwidthUpBytes} ",
+    "format-disconnected": "", //An empty format will hide the module.
+    "tooltip-format": "{ifname} via {gwaddr}",
+    "tooltip-format-wifi": "{essid} ({signalStrength}%) ",
+    "tooltip-format-ethernet": "{ipaddr} @ {ifname} 󰈀",
+    "tooltip-format-disconnected": "Disconnected",
+    "interval": 60,
+    "max-length": 50
   },
   "cpu": {
     "format": "{usage}% ",
