--- a/dot_config/waybar/config.jsonc
+++ b/dot_config/waybar/config.jsonc
@@ -35,7 +35,7 @@
   "network": {
     "format": "{ifname}",
     "format-wifi": "{essid} ({signalStrength}%) ",
-    "format-ethernet": "󰈀 | {bandwidthDownBytes}  | {bandwidthUpBytes} ",
+    "format-ethernet": "󰈀 | {bandwidthDownBytes}  | {bandwidthUpBytes} ",
     "format-disconnected": "", //An empty format will hide the module.
     "tooltip-format": "{ifname} via {gwaddr}",
     "tooltip-format-wifi": "{essid} ({signalStrength}%) ",
