--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -38,9 +38,10 @@ packages:
       - "eza"
       - "fancontrol-gui"
       - "fzf"
+      - "imagemagick"
+      - "lf"
       - "ncdu"
       - "neofetch"
-      - "ranger"
       - "unzip"
       - "zoxide"
       - "zsh-autosuggestions"
