--- a/dot_config/hypr/keybindings.conf
+++ b/dot_config/hypr/keybindings.conf
@@ -28,6 +28,9 @@ bind = $CONTROL, ESCAPE, exec, killall waybar || waybar
 # Run wlogout
 bind = $mainMod, backspace, exec, wlogout -b 2 -c 0 -r 0 --protocol layer-shell -m 400
 
+# Change Wallpaper
+bind = $mainMod CONTROL, W, sh ~/.local/bin/change_wallpaper.sh ~/.local/share/chezmoi/Wallpapers
+
 # Audio control
 bindl  = , XF86AudioMute, exec, pamixer -t
 bindel = , XF86AudioLowerVolume, exec, pamixer -d 2
