--- a/dot_config/hypr/launch.conf
+++ b/dot_config/hypr/launch.conf
@@ -2,7 +2,7 @@
 # █▄▄ █▀█ █▄█ █░▀█ █▄▄ █▀█
 
 exec-once = swww init
-exec-once = swww img ~/.local/share/chezmoi/Wallpapers/car.jpg
+exec-once = sh ~/.local/bin/change_wallpaper.sh ~/.local/share/chezmoi/Wallpapers
 exec-once = waybar
 exec-once = /usr/lib/polkit-kde-authentication-agent-1
 exec-once = wl-paste --type text --watch cliphist store
