--- a/dot_config/hypr/windowrules.conf
+++ b/dot_config/hypr/windowrules.conf
@@ -16,6 +16,7 @@ windowrulev2 = float,class:^(qt6ct)$
 windowrulev2 = float,class:^(nwg-look)$
 windowrulev2 = float,class:^(pavucontrol)$
 windowrulev2 = float,class:^(org.kde.polkit-kde-authentication-agent-1)$
+windowrulev2 = float,class:^(org.gnome.Calculator)$
 
 windowrulev2 = opacity 1 1,fullscreen: 1
 
