--- a/dot_config/hypr/windowrules.conf
+++ b/dot_config/hypr/windowrules.conf
@@ -23,7 +23,7 @@ windowrulev2 = opacity 1 1,fullscreen: 1
 # █░░ ▄▀█ █▄█ █▀▀ █▀█   █▀█ █░█ █░░ █▀▀ █▀
 # █▄▄ █▀█ ░█░ ██▄ █▀▄   █▀▄ █▄█ █▄▄ ██▄ ▄█
 
-# layerrule = blur,waybar
+layerrule = blur,waybar
 layerrule = blur,rofi
 layerrule = ignorezero,rofi
 layerrule = noanim,rofi
