Update .chezmoidata/packages.yaml Update .config/waybar/config.jsonc

--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -81,6 +81,7 @@ packages:
       - "com.ticktick.TickTick"
       - "md.obsidian.Obsidian"
       - "org.gnome.Calculator"
+      - "org.gnome.Calendar"
       - "org.gnome.eog"
   macos:
     casks:
