--- a/dot_config/waybar/config.jsonc
+++ b/dot_config/waybar/config.jsonc
@@ -12,6 +12,7 @@
   ],
   "clock": {
     "format": " {:%H:%M |  %A, %B %d, %Y}",
+    "on-click": "flatpak run org.gnome.Calendar"
   },
   "hyprland/workspaces": {
     "format": "<sub>{icon}</sub>"
@@ -26,7 +27,7 @@
   "wireplumber": {
     "format": "{volume} {icon}",
     "format-muted": "",
-    "on-click": "helvum",
+    "on-click": "pavucontrol",
     "format-icons": ["", "", ""]
   },
   "network": {
