--- a/dot_config/hypr/windowrules.conf
+++ b/dot_config/hypr/windowrules.conf
@@ -8,6 +8,8 @@ windowrulev2 = opacity 0.80 0.80,class:^(vesktop)$
 windowrulev2 = opacity 0.80 0.80,class:^(obsidian)$
 windowrulev2 = opacity 0.90 0.90,class:^(firefox)$
 windowrulev2 = opacity 0.80 0.70,class:^(org.kde.polkit-kde-authentication-agent-1)$
+windowrulev2 = opacity 0.80 0.70,class:^(org.gnome.Calculator)$
+windowrulev2 = opacity 0.80 0.70,class:^(org.gnome.Calendar)$
 
 windowrulev2 = float,title:^(Picture-in-Picture)$
 windowrulev2 = float,class:^(firefox)$,title:^(Library)$
@@ -17,6 +19,7 @@ windowrulev2 = float,class:^(nwg-look)$
 windowrulev2 = float,class:^(pavucontrol)$
 windowrulev2 = float,class:^(org.kde.polkit-kde-authentication-agent-1)$
 windowrulev2 = float,class:^(org.gnome.Calculator)$
+windowrulev2 = float,class:^(org.gnome.Calendar)$
 
 windowrulev2 = opacity 1 1,fullscreen: 1
 
