--- a/dot_config/hypr/windowrules.conf
+++ b/dot_config/hypr/windowrules.conf
@@ -30,3 +30,4 @@ layerrule = blur,waybar
 layerrule = blur,rofi
 layerrule = ignorezero,rofi
 layerrule = noanim,rofi
+layerrule = opacity 0.80 0.70,rofi
