--- a/dot_config/hypr/windowrules.conf
+++ b/dot_config/hypr/windowrules.conf
@@ -10,6 +10,7 @@ windowrulev2 = opacity 0.90 0.90,class:^(firefox)$
 windowrulev2 = opacity 0.80 0.70,class:^(org.kde.polkit-kde-authentication-agent-1)$
 windowrulev2 = opacity 0.80 0.70,class:^(org.gnome.Calculator)$
 windowrulev2 = opacity 0.80 0.70,class:^(org.gnome.Calendar)$
+windowrulev2 = opacity 0.80 0.70,class:^(rofi)$
 
 windowrulev2 = float,title:^(Picture-in-Picture)$
 windowrulev2 = float,class:^(firefox)$,title:^(Library)$
@@ -30,4 +31,3 @@ layerrule = blur,waybar
 layerrule = blur,rofi
 layerrule = ignorezero,rofi
 layerrule = noanim,rofi
-layerrule = opacity 0.80 0.70,rofi
