--- a/dot_config/waybar/config.jsonc
+++ b/dot_config/waybar/config.jsonc
@@ -13,11 +13,22 @@
   "hyprland/workspaces": {
     "format": "<sub>{icon}</sub>"
   },
-  "hyprland/window": {
-    "max-length": 50,
-    "separate-outputs": true,
-    "all-outputs": true
-  },
+      "hyprland/window": {
+        "format": "  {}",
+        "rotate": ${r_deg},
+        "separate-outputs": true,
+        "rewrite": {
+            "${USER}@${set_sysname}:(.*)": "$1 ",
+            "(.*) — Mozilla Firefox": "$1 󰈹",
+            "(.*)Mozilla Firefox": "Firefox 󰈹",
+            "(.*) - Visual Studio Code": "$1 󰨞",
+            "(.*)Visual Studio Code": "Code 󰨞",
+            "(.*) — Dolphin": "$1 󰉋",
+            "(.*)Spotify": "Spotify 󰓇",
+            "(.*)Steam": "Steam 󰓓"
+        },
+        "max-length": 1000
+    },
   "clock": {
     "format": " {:%H:%M |  %A, %B %d, %Y}",
     "on-click": "flatpak run org.gnome.Calendar"
