--- a/dot_config/waybar/config.jsonc
+++ b/dot_config/waybar/config.jsonc
@@ -18,7 +18,7 @@
     "max-length": 50,
     "separate-outputs": true,
     "rewrite": {
-      "(.*) -- Mozilla Firefox": "F $1"
+      "(.*) — Mozilla Firefox": "F $1"
     }
   },
   "clock": {
