--- a/dot_config/hypr/keybindings.conf
+++ b/dot_config/hypr/keybindings.conf
@@ -2,7 +2,7 @@
 # █░█ ██▄ ░█░ █▄█ █ █░▀█ █▄▀ █ █░▀█ █▄█ ▄█
 
 # Variables
-$terminal = kitty
+$terminal = kitty --title Kitty
 $menu = rofi -show drun
 $fileManager = dolphin
 $mainMod = SUPER
