--- a/dot_config/waybar/config.jsonc
+++ b/dot_config/waybar/config.jsonc
@@ -24,7 +24,7 @@
     "rewrite": {
       "(.*) — Mozilla Firefox": "󰈹 Firefox",
       "Kitty": " Kitty",
-      "(.*) Discord": " Discord"
+      "(.*) • Discord": " Discord"
     }
   },
   "clock": {
