--- a/.chezmoiignore
+++ b/.chezmoiignore
@@ -4,8 +4,8 @@ etc/
 etc/**
 README.md
 {{- if ne .chezmoi.os "linux" }}
-dot_config/dunst/
-dot_config/dunst/**
+dot_config/gtk-3.0
+dot_config/gtk-3.0/**
 dot_config/hypr/
 dot_config/hypr/**
 dot_config/paru/
@@ -17,4 +17,6 @@ dot_config/waybar/**
 dot_config/wlogout/
 dot_config/wlogout/**
 dot_config/kdeglobals
+dot_config/private_mimeapps.list
+private_dot_local/bin/change_wallpaper.sh
 {{- end }}
