--- a/.chezmoidata/linux.yaml
+++ b/.chezmoidata/linux.yaml
@@ -41,56 +41,56 @@ linux:
     - "flatpak"
 
     # Utilities
-    - "bat"
-    - "btop"
-    - "cliphist"
-    - "eza"
-    - "fancontrol-gui"
-    - "fzf"
-    - "imagemagick"
-    - "lf"
-    - "man"
-    - "ncdu"
-    - "neofetch"
-    - "unzip"
-    - "zoxide"
-    - "zsh-autosuggestions"
-    - "zsh-syntax-highlighting"
+    # - "bat"
+    # - "btop"
+    # - "cliphist"
+    # - "eza"
+    # - "fancontrol-gui"
+    # - "fzf"
+    # - "imagemagick"
+    # - "lf"
+    # - "man"
+    # - "ncdu"
+    # - "neofetch"
+    # - "unzip"
+    # - "zoxide"
+    # - "zsh-autosuggestions"
+    # - "zsh-syntax-highlighting"
 
     # Dev
-    - "docker"
-    - "docker-compose"
-    - "github-cli"
-    - "kitty"
-    - "neovim"
-    - "nvidia-container-toolkit"
-    - "nvm"
-    - "ollama-cuda"
-    - "tmux"
+    # - "docker"
+    # - "docker-compose"
+    # - "github-cli"
+    # - "kitty"
+    # - "neovim"
+    # - "nvidia-container-toolkit"
+    # - "nvm"
+    # - "ollama-cuda"
+    # - "tmux"
 
     # Apps
-    - "dolphin"
-    - "firefox"
-    - "chromium"
-    - "steam"
-    - "openrgb"
-    - "pavucontrol"
-    - "vesktop"
+    # - "dolphin"
+    # - "firefox"
+    # - "chromium"
+    # - "steam"
+    # - "openrgb"
+    # - "pavucontrol"
+    # - "vesktop"
 
     # Themes
-    - "rose-pine-gtk-theme-full"
-    - "sddm-theme-tokyo-night-git"
+    # - "rose-pine-gtk-theme-full"
+    # - "sddm-theme-tokyo-night-git"
 
     # Fonts
-    - "noto-fonts"
-    - "noto-fonts-cjk"
-    - "noto-fonts-emoji"
-    - "noto-fonts-extra"
-    - "ttf-hack-nerd"
-    - "ttf-noto-nerd"
+    # - "noto-fonts"
+    # - "noto-fonts-cjk"
+    # - "noto-fonts-emoji"
+    # - "noto-fonts-extra"
+    # - "ttf-hack-nerd"
+    # - "ttf-noto-nerd"
   flatpaks:
-    - "com.ticktick.TickTick"
-    - "md.obsidian.Obsidian"
-    - "org.gnome.Calculator"
-    - "org.gnome.Calendar"
+    # - "com.ticktick.TickTick"
+    # - "md.obsidian.Obsidian"
+    # - "org.gnome.Calculator"
+    # - "org.gnome.Calendar"
     - "org.gnome.eog"
