--- a/.chezmoidata/linux.yaml
+++ b/.chezmoidata/linux.yaml
@@ -41,21 +41,21 @@ linux:
     - "flatpak"
 
     # Utilities
-    # - "bat"
-    # - "btop"
-    # - "cliphist"
-    # - "eza"
-    # - "fancontrol-gui"
-    # - "fzf"
-    # - "imagemagick"
-    # - "lf"
-    # - "man"
-    # - "ncdu"
-    # - "neofetch"
-    # - "unzip"
-    # - "zoxide"
-    # - "zsh-autosuggestions"
-    # - "zsh-syntax-highlighting"
+    - "bat"
+    - "btop"
+    - "cliphist"
+    - "eza"
+    - "fancontrol-gui"
+    - "fzf"
+    - "imagemagick"
+    - "lf"
+    - "man"
+    - "ncdu"
+    - "neofetch"
+    - "unzip"
+    - "zoxide"
+    - "zsh-autosuggestions"
+    - "zsh-syntax-highlighting"
 
     # Dev
     # - "docker"
