--- a/.chezmoidata/linux.yaml
+++ b/.chezmoidata/linux.yaml
@@ -1,72 +1,72 @@
 linux:
   packages:
-    # # System
-    # - "linux-zen-headers"
-    # ## Dependencies
-    # - "libva"
-    # ## Shell
-    # - "zsh"
-    # ## Nvidia
-    # - "nvidia-dkms"
-    # ## WM
-    # - "hyprland-git"
-    # ## Greeter
-    # - "sddm-git"
-    # ## Logout
-    # - "wlogout"
-    # ## Authentication
-    # - "polkit-kde-agent"
-    # ## Desktop portals
-    # - "xdg-desktop-portal-hyprland-git"
-    # - "xdg-desktop-portal-gtk"
-    # ## GUI
-    # - "qt5ct"
-    # - "qt5-wayland"
-    # - "qt6ct"
-    # - "qt6-wayland"
-    # - "nwg-look"
-    # ## Audio
-    # - "pamixer"
-    # ## App launcher
-    # - "rofi-lbonn-wayland-git"
-    # ## Top bar
-    # - "waybar"
-    # ## Notifications
-    # - "swaync"
-    # ## Shell prompt
-    # - "starship"
-    # ## Wallpapers
-    # - "swww"
-    # ## Package manager
-    # - "flatpak"
+    # System
+    - "linux-zen-headers"
+    ## Dependencies
+    - "libva"
+    ## Shell
+    - "zsh"
+    ## Nvidia
+    - "nvidia-dkms"
+    ## WM
+    - "hyprland-git"
+    ## Greeter
+    - "sddm-git"
+    ## Logout
+    - "wlogout"
+    ## Authentication
+    - "polkit-kde-agent"
+    ## Desktop portals
+    - "xdg-desktop-portal-hyprland-git"
+    - "xdg-desktop-portal-gtk"
+    ## GUI
+    - "qt5ct"
+    - "qt5-wayland"
+    - "qt6ct"
+    - "qt6-wayland"
+    - "nwg-look"
+    ## Audio
+    - "pamixer"
+    ## App launcher
+    - "rofi-lbonn-wayland-git"
+    ## Top bar
+    - "waybar"
+    ## Notifications
+    - "swaync"
+    ## Shell prompt
+    - "starship"
+    ## Wallpapers
+    - "swww"
+    ## Package manager
+    - "flatpak"
 
-    # # Utilities
-    # - "bat"
-    # - "btop"
-    # - "cliphist"
-    # - "eza"
-    # - "fancontrol-gui"
-    # - "fzf"
-    # - "imagemagick"
-    # - "lf"
-    # - "man"
-    # - "ncdu"
-    # - "neofetch"
-    # - "unzip"
-    # - "zoxide"
-    # - "zsh-autosuggestions"
-    # - "zsh-syntax-highlighting"
+    # Utilities
+    - "bat"
+    - "btop"
+    - "cliphist"
+    - "eza"
+    - "fancontrol-gui"
+    - "fzf"
+    - "imagemagick"
+    - "lf"
+    - "man"
+    - "ncdu"
+    - "neofetch"
+    - "unzip"
+    - "zoxide"
+    - "zsh-autosuggestions"
+    - "zsh-syntax-highlighting"
 
-    # # Dev
-    # - "docker"
-    # - "docker-compose"
-    # - "github-cli"
-    # - "kitty"
-    # - "neovim"
-    # - "nvidia-container-toolkit"
-    # - "nvm"
-    # - "ollama-cuda"
-    # - "tmux"
+    # Dev
+    - "docker"
+    - "docker-compose"
+    - "github-cli"
+    - "kitty"
+    - "neovim"
+    - "nvidia-container-toolkit"
+    - "nvm"
+    - "ollama-cuda"
+    - "tmux"
 
     # # Apps
     # - "dolphin"
