--- a/.chezmoiignore
+++ b/.chezmoiignore
@@ -22,3 +22,11 @@ dot_config/kdeglobals
 dot_config/private_mimeapps.list
 private_dot_local/bin/change_wallpaper.sh
 {{- end }}
+{{- if eq .chezmoi.os "windows" }}
+dot_config/
+dot_config/**
+private_dot_local/
+private_dot_local/**
+dot_git_config
+dot_zshrc.tmpl
+{{- end  }}
