--- a/dot_config/hypr/windowrules.conf
+++ b/dot_config/hypr/windowrules.conf
@@ -4,7 +4,7 @@
 windowrulev2 = suppressevent maximize, class:.*
 
 windowrulev2 = opacity 0.80 0.80,class:^(org.kde.dolphin)$
-windowrulev2 = opacity 0.80 0.80,class:^(vesktop)$
+windowrulev2 = opacity 0.80 0.80,class:^(discord)$
 windowrulev2 = opacity 0.80 0.80,class:^(obsidian)$
 windowrulev2 = opacity 0.90 0.90,class:^(firefox)$
 windowrulev2 = opacity 0.80 0.70,class:^(org.kde.polkit-kde-authentication-agent-1)$
