--- a/.chezmoiignore
+++ b/.chezmoiignore
@@ -7,7 +7,7 @@ Fonts/**
 Wallpapers/
 Wallpapers/**
 README.md
-{{- if ne .chezmoi.os "linux" }}
+{{- if eq .chezmoi.os "darwin" }}
 dot_config/gtk-3.0
 dot_config/gtk-3.0/**
 dot_config/hypr/
@@ -25,12 +25,11 @@ dot_config/wlogout/**
 dot_config/kdeglobals
 dot_config/private_mimeapps.list
 private_dot_local/bin/change_wallpaper.sh
-{{- end }}
-{{- if eq .chezmoi.os "windows" }}
+{{- else if eq .chezmoi.os "windows" }}
 dot_config/
 dot_config/**
 private_dot_local/
 private_dot_local/**
-dot_git_config
+dot_gitconfig
 dot_zshrc.tmpl
-{{- end  }}
+{{- end }}
