--- a/.chezmoidata/windows.yaml
+++ b/.chezmoidata/windows.yaml
@@ -1,10 +1,13 @@
 windows:
   apps:
     - "Alacritty.Alacritty"
-    # - "Chocolatey.Chocolatey"
     - "Discord.Discord"
+    - "GitHub.cli"
     - "Microsoft.PowerToys"
     - "Microsoft.VisualStudioCode"
+    - "NirSoft.NirCmd"
     - "OliverSchwendener.ueli"
     - "TheBrowserCompany.Arc"
     - "Valve.Steam"
+  sudos:
+    - "glzr-io.glazewm --location 'C:\Program Files\GlazeWM'"
